--- a/apps/docs/src/content/docs/getting-started/why-useflow.mdx
+++ b/apps/docs/src/content/docs/getting-started/why-useflow.mdx
@@ -293,7 +293,7 @@ function App() {
 >
 ```
 
-**Real impact:** Users can close their browser, lose connection, or come back days later - they continue exactly where they left off. This alone can increase completion rates by 40%.
+**Real impact:** Users can close their browser, lose connection, or come back days later - they continue exactly where they left off.
 
 ### Drop-in analytics
 
